--- a/src/content/blog/LifeLoggerz-Q-and-A.mdx
+++ b/src/content/blog/LifeLoggerz-Q-and-A.mdx
@@ -4,103 +4,297 @@ pubDate: "2025-10-09"
 description: "Common questions about how I track my life daily using Google Sheets, why I do it, and what I’ve learned from years of logging data."
 tags: ["LifeLoggerz", "Google Sheets", "Data Tracking", "Self-Improvement"]
 heroImage: "/images/about-lifeloggerz.gif"
-draft: false             
+draft: false
 ---
 
 # 🧠 LifeLoggerz Q&A — Tracking Life, One Cell at a Time
 
 Welcome to **LifeLoggerz**, a blog by a grad student obsessed with data and self-improvement.  
-I’ve been tracking dozens of aspects of my daily life in Google Sheets for years, everything from sleep and food to diary logs and time spent on hobbies.  
+I’ve been tracking dozens of aspects of my daily life in Google Sheets for years — everything from sleep and food to diary logs and time spent on hobbies.
 
-Here are some of the most common questions I get about how (and why) I do it.
-
----
-
-## 💬 How do you have so much time?
-
-It’s not that I *have* more time, I've simply **removed what doesn’t matter**. Remember that **everyone has 24 hours in a day**.
-Everyone eats, sleeps, uses the restroom, etc. The key is to optimize the remaining time. Is there something you can improve the efficiency of at work or in your personal life? **Do it**.
-
-**Logging my life** helps me see where my time actually goes. Once you see clearly, you realize how much of your day you can reclaim.
-I've automated processes and cut out/merged tasks to where I have more available time. 
-For instance, I don't watch TV/Netflix/Movies or look at social media/the news. Instead I listen to audiobooks while doing menial tasks (ex: driving) and this leaves me time for creative hobbies.
-Plenty of other tips and tricks for saving time that you'll find on LifeLoggerz!
+Use the sections below to jump to what you care about.  
+Each question expands when you click it.
 
 ---
 
-## ⏰ How long does life logging take each day?
+## 🚀 Getting Started
 
-Only about **3–5 minutes per day** for the bare essentials. 
-Most stats are quick notes in my *Raw Data* sheet. My diary logs take a little longer — maybe 10–30 minutes at night when I’m winding down. It's up to you how much you want to track, I find that journaling the day's events gives context to the stats logged for a given day.
+<section class="faq-section">
 
-The system’s mostly automated with **Google Apps Script**. I built pop-up input forms, automatic daily backups, and other functions so logging feels effortless.  
-It’s less of a chore and more of a nightly reflection ritual, something that at this point I can't fathom skipping for even a day.
+<details class="faq-item">
+  <summary>Who is LifeLoggerz for?</summary>
+  <div class="faq-answer">
+    <p>
+      LifeLoggerz is for anyone who wants to make better decisions using data from
+      their own life — students, researchers, productivity nerds, and anyone who
+      likes structure but doesn’t want a bulky app.
+    </p>
+  </div>
+</details>
 
----
+<details class="faq-item">
+  <summary>How do you have so much time?</summary>
+  <div class="faq-answer">
+    <p>
+      I don’t have more time than anyone else — I’ve just stripped out things
+      that matter less. I rarely watch TV/Netflix or scroll social media, and I
+      pair menial tasks (driving, washing, mowing) with audiobooks or learning.
+    </p>
+    <p>
+      Tracking my days makes it obvious where hours are leaking, so I can remove
+      or compress low-value activities.
+    </p>
+  </div>
+</details>
 
-## 🧩 What have you learned from tracking your life?
+<details class="faq-item">
+  <summary>How long does logging take each day?</summary>
+  <div class="faq-answer">
+    <p>
+      Logging the essential stats takes about <strong>5 minutes</strong> a day.
+      Longer diary entries are optional and happen when I want to think deeper
+      about the day.
+    </p>
+  </div>
+</details>
 
-A lot. I mean that sincerely, it's helped me grow in many ways:
+<details class="faq-item">
+  <summary>What kinds of things do you track?</summary>
+  <div class="faq-answer">
+    <p>
+      I currently track <strong>150+ stats</strong>: sleep, food, health
+      symptoms, research and work hours, workouts, reading, guitar practice,
+      social time, “blunders,” and more. Some are simple checkmarks; others have
+      short written notes.
+    </p>
+  </div>
+</details>
 
-- **Time awareness** — Life moves fast until you track it. Looking back at any day in 2023 or 2024, I can recall what I did, what I ate, and how I felt.
-- **Sharper memory** — Logging daily strengthens your recall; small details start to stick naturally. No longer do I struggle to remember what I had for breakfast, or when I got home.
-- **Accountability through data** — The spreadsheet never lies. It shows you your habits and gives you fuel for improvement.
+<details class="faq-item">
+  <summary>Do you really look back at all this data?</summary>
+  <div class="faq-answer">
+    <p>
+      Not every single row. The value is that everything is there <em>if</em> I
+      need it. I mostly review dashboards and summaries monthly and yearly to
+      see trends in energy, habits, and output.
+    </p>
+  </div>
+</details>
 
----
-
-## 🕶 Do you track “wasted time”?
-
-Ironically, no. Otherwise, I'd know how much time was spent on building all of these systems. /s
-In truth, I used to, but I find that I go too far and treat 'closing my eyes to rest after a long work session' as wasted time. 
-You can never be 100% productive. What matters is that you see how much you accomplish even on your toughest days.
-If you want your dashboard to display “4 hours, 57 minutes, and 32 seconds wasted today,” feel free to add it.
-I personally prefer to see what meaningful things occupy my time. Wasted time is something I’m already aware of and I don’t need a reminder for it.
-
----
-
-## 📄 Can I have your templates?
-
-Absolutely.  
-
-The **LifeLoggerz Templates** are **free** to download.  
-They're simple, clean, and the spreadsheet ones work best in **Google Sheets** (you can migrate it to Excel if you wish).
-
-You can:
-- Delete sheets you don’t need (e.g., *Blunders* → add *Mood* or *Calories* instead)
-- Use it without scripts or formulas
-- Add automation later through **Google Apps Script**
-
-> 🧠 *Pro tip:* If you want to use Apps Script, make sure it’s a native Google Sheet (`.gsheet`), not a `.xlsx` import.
-
----
-
-## 🔁 Will you keep doing this forever?
-
-Pretty much.  
-I can’t imagine *not* logging. It’s become second nature.  
-
-If I skip a night because I'm super busy/tired/sick, I fill it in the next morning by memory. It has to get done, no excuses.  
-
-Every year, I refine the templates, improve the visuals, and share free resources so others can join in tracking for self-improvement/reflection.
-**LifeLoggerz** isn’t a one-time project. You'll see this site grow in content.
-
----
-
-## 📱 Why not build an app for this?
-
-I’ve thought about it. But I love how transparent Google Sheets is.  
-You can *see* every formula, tweak it, and understand the logic.  
-
-Apps tend to hide the system; Sheets teaches you how it works.  
-Plus, you already have the tool — it’s free, cloud-based, and endlessly customizable.  
-
-Maybe one day I’ll turn it into an app, but for now, **I want to empower people to build their own systems**.
+</section>
 
 ---
 
-## 🚀 What’s next?
+## 📊 Templates & Usage
 
-2026 is about sharing everything I’ve built — not just the sheets, but the philosophy behind them. Stick around!
+<section class="faq-section">
 
+<details class="faq-item">
+  <summary>Can I use your templates?</summary>
+  <div class="faq-answer">
+    <p>
+      Yes. My goal is to share systems that work in real life. You’re welcome to
+      copy and adapt them for your personal use.
+    </p>
+  </div>
+</details>
 
+<details class="faq-item">
+  <summary>Are your templates free?</summary>
+  <div class="faq-answer">
+    <p>
+      Right now, yes — the focus is on sharing and refining the tools. If that
+      changes in the future, the site will make it clear which resources are
+      free and which are paid.
+    </p>
+  </div>
+</details>
 
+<details class="faq-item">
+  <summary>Can I modify and share your templates?</summary>
+  <div class="faq-answer">
+    <p>
+      You can freely modify them for your own projects. If you share an adapted
+      version publicly, I’d appreciate a small credit to
+      <strong>LifeLoggerz</strong> with a link back to the site.
+    </p>
+  </div>
+</details>
+
+<details class="faq-item">
+  <summary>Do you take requests for new templates or features?</summary>
+  <div class="faq-answer">
+    <p>
+      Yes. If there’s a system you’d like to see — study tracking, finances,
+      lab work, etc. — send me an email. I can’t promise I’ll build everything,
+      but I do keep a running list.
+    </p>
+  </div>
+</details>
+
+</section>
+
+---
+
+## 🔒 Privacy & Data
+
+<section class="faq-section">
+
+<details class="faq-item">
+  <summary>Do you share your raw personal data?</summary>
+  <div class="faq-answer">
+    <p>
+      No. I share <strong>structures</strong>, screenshots, fake/demo data, and
+      lessons learned — not my live personal spreadsheets.
+    </p>
+  </div>
+</details>
+
+<details class="faq-item">
+  <summary>How should I protect my own logs?</summary>
+  <div class="faq-answer">
+    <p>
+      Keep your sheets private, back them up regularly (cloud + offline if
+      possible), and be careful about what you screenshot or share publicly.
+      Treat the data like a journal: helpful, but personal.
+    </p>
+  </div>
+</details>
+
+<details class="faq-item">
+  <summary>Do you collect analytics or personal info from visitors?</summary>
+  <div class="faq-answer">
+    <p>
+      If I ever add analytics, they’ll be lightweight and privacy-respecting.
+      The goal is to understand what posts and tools help people most — not to
+      track individuals.
+    </p>
+  </div>
+</details>
+
+</section>
+
+---
+
+## 🛠 Technical & Tools
+
+<section class="faq-section">
+
+<details class="faq-item">
+  <summary>What tools power your systems?</summary>
+  <div class="faq-answer">
+    <p>
+      Most systems are built in <strong>Google Sheets</strong> with
+      <strong>conditional formatting</strong>, formulas, and
+      <strong>Google Apps Script</strong>. I also use
+      <strong>Python</strong> to automate processing, analysis, and exports
+      (Excel, PowerPoint, etc.).
+    </p>
+  </div>
+</details>
+
+<details class="faq-item">
+  <summary>Do I need to know coding to use your setups?</summary>
+  <div class="faq-answer">
+    <p>
+      No. Many templates can be used with zero code knowledge. Coding knowledge
+      simply lets you automate more and push things further.
+    </p>
+  </div>
+</details>
+
+<details class="faq-item">
+  <summary>What if something breaks in a template or script?</summary>
+  <div class="faq-answer">
+    <p>
+      Start by checking the notes inside the sheet or script — I try to leave
+      comments where things are likely to go wrong. If you’re still stuck, feel
+      free to email me a brief description (and ideally a screenshot).
+    </p>
+  </div>
+</details>
+
+</section>
+
+---
+
+## 🌱 Philosophy & Purpose
+
+<section class="faq-section">
+
+<details class="faq-item">
+  <summary>Why do you track so many things?</summary>
+  <div class="faq-answer">
+    <p>
+      Because <strong>small habits compound</strong>. Tracking lets me see the
+      connection between daily choices and long-term outcomes in health, work,
+      and happiness. Without data, it’s easy to lie to yourself.
+    </p>
+  </div>
+</details>
+
+<details class="faq-item">
+  <summary>Isn’t this level of tracking overkill?</summary>
+  <div class="faq-answer">
+    <p>
+      It would be overkill if it took an hour a day. But with good design and
+      automation, logging becomes a fast, almost automatic ritual. Once the
+      system is built, maintenance is light.
+    </p>
+  </div>
+</details>
+
+<details class="faq-item">
+  <summary>Do you ever take breaks from tracking?</summary>
+  <div class="faq-answer">
+    <p>
+      Yes. If life gets chaotic or I’m traveling, I’ll sometimes log less
+      detail. The goal is a system that serves real life — not the other way
+      around.
+    </p>
+  </div>
+</details>
+
+<details class="faq-item">
+  <summary>What’s the biggest benefit you’ve seen?</summary>
+  <div class="faq-answer">
+    <p>
+      Clarity. I can see when I’m drifting, when I’m overworking, and when
+      certain habits (sleep, exercise, guitar, reading) correlate with better
+      days. It’s easier to correct course when the evidence is right in front of
+      you.
+    </p>
+  </div>
+</details>
+
+</section>
+
+---
+
+## 📬 Contact & Collaboration
+
+<section class="faq-section">
+
+<details class="faq-item">
+  <summary>How can I contact you?</summary>
+  <div class="faq-answer">
+    <p>
+      The easiest way is email:
+      <strong>lifeloggerz.official@gmail.com</strong>.
+    </p>
+  </div>
+</details>
+
+<details class="faq-item">
+  <summary>Do you do talks, workshops, or collaborations?</summary>
+  <div class="faq-answer">
+    <p>
+      I’m open to collaborations, guest talks, or workshops related to personal
+      analytics, Google Sheets systems, or research/workflows. If you’re
+      interested, send an email with a short description of what you have in
+      mind.
+    </p>
+  </div>
+</details>
+
+</section>
