--- a/src/content/blog/LifeLoggerz-Q-and-A.mdx
+++ b/src/content/blog/LifeLoggerz-Q-and-A.mdx
@@ -81,6 +81,79 @@ Each question expands when you click it.
   </div>
 </details>
 
+<details class="faq-item">
+  <summary>When did you start tracking your life?</summary>
+  <div class="faq-answer">
+    <p>
+      I started tracking in <strong>January 2023</strong> as a simple
+      self-improvement experiment. At first I only logged sleep and meals.
+      Over time, I realized that structured logging helped me think more
+      clearly, and the system slowly evolved into what it is today.
+    </p>
+  </div>
+</details>
+
+<details class="faq-item">
+  <summary>What sparked all of this? Why did you start LifeLoggerz?</summary>
+  <div class="faq-answer">
+    <p>
+      I used to rewrite the same goals, notes, and ideas over and over. I felt
+      like I was constantly rearranging my thoughts instead of acting on them.
+      Tracking gave me <strong>clarity, structure, and honesty</strong> about
+      how I spend my time. LifeLoggerz grew out of that — a way to share the
+      systems I built with anyone who finds value in them.
+    </p>
+  </div>
+</details>
+
+<details class="faq-item">
+  <summary>How has your system changed over time?</summary>
+  <div class="faq-answer">
+    <p>
+      It started as a lightweight habit log. Now it tracks
+      <strong>150+ metrics</strong>, includes dashboards, reflections,
+      and automation — but the philosophy never changed:
+      <strong>awareness first, complexity second</strong>. The system only
+      expands when it actually makes life better.
+    </p>
+  </div>
+</details>
+
+<details class="faq-item">
+  <summary>Do you ever fall behind on logging?</summary>
+  <div class="faq-answer">
+    <p>
+      Yes — and that’s normal. When life gets busy, I simplify instead of
+      quitting. I may log fewer details or catch up later. The goal is
+      <strong>long-term consistency</strong>, not perfection.
+    </p>
+  </div>
+</details>
+
+<details class="faq-item">
+  <summary>What advice do you have for someone just starting?</summary>
+  <div class="faq-answer">
+    <p>
+      Start small. Track <strong>3 meaningful stats</strong> for two weeks.
+      Only add more if the data helps you make better decisions. A useful
+      small system beats a complicated one you abandon.
+    </p>
+  </div>
+</details>
+
+<details class="faq-item">
+  <summary>How are you able to do so much?</summary>
+  <div class="faq-answer">
+    <p>
+      I don’t have more time — I’ve removed friction. I batch tasks, automate
+      repetitive work, avoid mindless scrolling, and pair chores with learning
+      or audiobooks. The systems don’t just track my life —
+      <strong>they create time by eliminating waste</strong>.
+    </p>
+  </div>
+</details>
+
+
 </section>
 
 ---
@@ -214,6 +287,28 @@ Each question expands when you click it.
   </div>
 </details>
 
+<details class="faq-item">
+  <summary>Do you back up your logs? How do you avoid losing data?</summary>
+  <div class="faq-answer">
+    <p>
+      Yes. I keep multiple backups — cloud copies, periodic exports, and
+      offline storage. Anything as valuable as a personal history deserves the
+      same care as financial or academic records.
+    </p>
+  </div>
+</details>
+
+<details class="faq-item">
+  <summary>Why Google Sheets instead of apps or Notion?</summary>
+  <div class="faq-answer">
+    <p>
+      Sheets is <strong>fast, flexible, portable, and scriptable</strong>.
+      I can design exactly the system I need instead of forcing my life into an
+      app’s constraints. And if I ever want to move platforms — my data is mine.
+    </p>
+  </div>
+</details>
+
 </section>
 
 ---
@@ -263,6 +358,39 @@ Each question expands when you click it.
       certain habits (sleep, exercise, guitar, reading) correlate with better
       days. It’s easier to correct course when the evidence is right in front of
       you.
+    </p>
+  </div>
+</details>
+
+<details class="faq-item">
+  <summary>Has tracking ever become too much?</summary>
+  <div class="faq-answer">
+    <p>
+      It can — which is why I design systems to be
+      <strong>lightweight and sustainable</strong>. When logging starts to feel
+      heavy, I simplify the inputs instead of abandoning the system.
+    </p>
+  </div>
+</details>
+
+<details class="faq-item">
+  <summary>Do you still enjoy life while tracking so many things?</summary>
+  <div class="faq-answer">
+    <p>
+      Yes — tracking isn’t about control, it’s about awareness. The goal is to
+      <strong>live better</strong>, not to micromanage every moment. Most of the
+      time, logging takes seconds and disappears into the background.
+    </p>
+  </div>
+</details>
+
+<details class="faq-item">
+  <summary>What has surprised you most from your data?</summary>
+  <div class="faq-answer">
+    <p>
+      How often my intuition is wrong. Sleep, exercise, social time, and
+      focused work all have clear patterns. The data helped me see cause-and-effect
+      in areas where I used to rely only on guesswork.
     </p>
   </div>
 </details>
