--- a/src/content/blog/LifeLoggerz-Q-and-A.mdx
+++ b/src/content/blog/LifeLoggerz-Q-and-A.mdx
@@ -395,6 +395,52 @@ Each question expands when you click it.
   </div>
 </details>
 
+<details class="faq-item">
+  <summary>What’s the difference between efficiency and effectiveness — and which do you focus on?</summary>
+  <div class="faq-answer">
+    <p>
+      I prioritize <strong>effectiveness first</strong> — doing the right things —
+      and then use efficiency to remove friction in those areas. A fast,
+      optimized system that moves in the wrong direction isn’t improvement.
+      Once direction is clear, efficiency compounds the results.
+    </p>
+  </div>
+</details>
+
+<details class="faq-item">
+  <summary>Are you proactive or reactive in how you approach life and work?</summary>
+  <div class="faq-answer">
+    <p>
+      I try to operate proactively by building systems that prevent chaos before
+      it happens — checklists, logs, reminders, and routines. But life isn’t
+      clean, and things still go off-script. The systems help me
+      <strong>react calmly and recover faster</strong> when they do.
+    </p>
+  </div>
+</details>
+
+<details class="faq-item">
+  <summary>Do systems limit creativity, or do they increase it?</summary>
+  <div class="faq-answer">
+    <p>
+      For me, systems <strong>create freedom</strong>. Structure reduces mental
+      clutter and decision fatigue, which leaves more energy for thinking,
+      learning, building, and creating. The goal isn’t rigidity — it’s clarity.
+    </p>
+  </div>
+</details>
+
+<details class="faq-item">
+  <summary>What do you ultimately work toward?</summary>
+  <div class="faq-answer">
+    <p>
+      Clarity, stewardship of time, and becoming a little more disciplined each
+      year — without losing curiosity, gratitude, or joy. The systems aren’t the
+      goal; they’re tools that help me live more intentionally.
+    </p>
+  </div>
+</details>
+
 </section>
 
 ---
